Separate entries for Formalin and Bavistine

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oyster Farm Manager - INR</title>
+    <title>Oyster Farm Pro Manager</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
@@ -52,8 +52,8 @@
             <optgroup label="Raw Materials">
                 <option value="Straw">Straw</option>
                 <option value="Spawn">Spawn</option>
-                <option value="Chemicals">Formalin</option>
                 <option value="Chemicals">Bavistine</option>
+                <option value="Chemicals">Formalin</option>
             </optgroup>
             <optgroup label="Worker Pay">
                 <option value="Worker">Pallavi Mavshi</option>
