Update index.html for Zero check

--- a/index.html
+++ b/index.html
@@ -14,28 +14,23 @@
         body { font-family: -apple-system, system-ui, sans-serif; background: #f0f2f5; margin: 0; padding: 15px; color: var(--dark); }
         .card { background: white; padding: 15px; border-radius: 12px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
         .sync-status { font-size: 11px; text-align: center; color: var(--success); margin-bottom: 10px; font-weight: bold; }
-        h2 { margin-top: 0; font-size: 1rem; border-bottom: 2px solid #eee; padding-bottom: 8px; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.5px; }
+        h2 { margin-top: 0; font-size: 1rem; border-bottom: 2px solid #eee; padding-bottom: 8px; margin-bottom: 10px; text-transform: uppercase; }
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
         .full { grid-column: span 2; text-align: center; }
         .val { font-size: 1.3rem; font-weight: bold; display: block; }
         input, select, button { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; font-size: 15px; }
         button { background: var(--dark); color: white; border: none; font-weight: bold; cursor: pointer; }
-        .btn-sale { background: var(--success); } .btn-yield { background: var(--yield); } .btn-waste { background: #95a5a6; }
-        
-        /* Stock Monitor */
+        .btn-sale { background: var(--success); } .btn-yield { background: var(--yield); } .btn-waste { background: #e67e22; }
         .stock-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; }
         .stock-item { padding: 8px; border-radius: 8px; background: #f8f9fa; border-left: 4px solid #ddd; font-size: 11px; }
         .low-stock { border-left-color: var(--danger); background: #fff1f1; color: var(--danger); font-weight: bold; }
-        
-        /* History & Action Buttons */
         .table-container { overflow-x: auto; max-height: 500px; }
         table { width: 100%; border-collapse: collapse; font-size: 12px; }
         td, th { padding: 10px 5px; border-bottom: 1px solid #eee; text-align: left; }
         .tag { padding: 2px 5px; border-radius: 4px; color: white; font-size: 9px; font-weight: bold; text-transform: uppercase; }
         .acc-tag { font-size: 9px; padding: 1px 4px; border-radius: 3px; color: white; font-weight: bold; margin-left: 4px; }
         .Bipin { background: var(--bipin); } .Arjun { background: var(--arjun); } .Kotak { background: var(--kotak); }
-        .action-btn { background: none; color: #ccc; width: auto; padding: 5px; font-size: 14px; margin: 0; display: inline; }
-        .del-btn:hover { color: var(--danger); } .edit-btn:hover { color: var(--success); }
+        .action-btn { background: none; color: #ccc; width: auto; padding: 5px; font-size: 14px; cursor: pointer;}
     </style>
 </head>
 <body>
@@ -83,7 +78,7 @@
             <option value="Kotak">Kotak</option>
         </select>
         <input type="number" id="e-amt" placeholder="Amount (₹)">
-        <input type="number" id="e-qty" placeholder="Quantity (kg/units)">
+        <input type="number" id="e-qty" placeholder="Quantity">
         <button onclick="addData('exp')">Save Expense</button>
     </div>
 
@@ -106,8 +101,12 @@
                 <button class="btn-yield" onclick="addData('yield')">Save Yield</button>
             </div>
             <div>
-                <label><small>Wastage (Bags)</small></label>
-                <input type="number" id="w-qty" placeholder="Bags">
+                <label><small>Waste Type</small></label>
+                <select id="w-type" onchange="updateWastePlaceholder()">
+                    <option value="Mushroom">Mushroom (kg)</option>
+                    <option value="Contaminated Bag">Contaminated (Bag)</option>
+                </select>
+                <input type="number" step="0.1" id="w-val" placeholder="Weight (kg)">
                 <button class="btn-waste" onclick="addData('waste')">Log Waste</button>
             </div>
         </div>
@@ -121,14 +120,21 @@
                 <tbody id="history-body"></tbody>
             </table>
         </div>
-        <button onclick="loadCloudData()" style="background:#3498db; margin-top:10px; font-size:12px;">🔄 Force Sync</button>
     </div>
 
     <script>
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwIUydcxYMuzFDw1ARVU2kie0msHaX6_CATRrLcpLjja4vTwOmnG6HP3ecZH9rYtv5i/exec"; // Replace this!
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwIUydcxYMuzFDw1ARVU2kie0msHaX6_CATRrLcpLjja4vTwOmnG6HP3ecZH9rYtv5i/exec"; 
         let dbMaster = [];
         let myChart;
         const limits = { "Straw": 5, "Spawn": 2, "PP Bags": 50, "Punnets": 100 };
+
+        // HELPER: Safety function to ensure numbers are never blank/NaN
+        const safeNum = (val) => isNaN(parseFloat(val)) ? 0 : parseFloat(val);
+
+        function updateWastePlaceholder() {
+            const type = document.getElementById('w-type').value;
+            document.getElementById('w-val').placeholder = type === "Mushroom" ? "Weight (kg)" : "Bags (Qty)";
+        }
 
         window.onload = loadCloudData;
 
@@ -144,36 +150,31 @@
 
         async function addData(type) {
             const today = new Date().toISOString().split('T')[0];
-            let payload = { action: "add", type, date: "", details: "", amt: 0, qty: 0, paidBy: "" };
+            let payload = { action: "add", type, date: document.getElementById(type==='exp'?'e-date':(type==='sale'?'s-date':'hw-date')).value || today, details: "", amt: 0, qty: 0, paidBy: "" };
 
             if (type === 'exp') {
                 payload.details = document.getElementById('e-cat').value;
-                payload.amt = parseFloat(document.getElementById('e-amt').value) || 0;
-                payload.qty = parseFloat(document.getElementById('e-qty').value) || 0;
+                payload.amt = safeNum(document.getElementById('e-amt').value);
+                payload.qty = safeNum(document.getElementById('e-qty').value);
                 payload.paidBy = document.getElementById('e-paidBy').value;
-                payload.date = document.getElementById('e-date').value || today;
             } else if (type === 'sale') {
-                const q = parseFloat(document.getElementById('s-qty').value) || 0;
-                const p = parseFloat(document.getElementById('s-price').value) || 0;
-                payload.amt = q * p;
-                payload.qty = q;
+                const q = safeNum(document.getElementById('s-qty').value);
+                const p = safeNum(document.getElementById('s-price').value);
+                payload.amt = q * p; payload.qty = q;
                 payload.details = document.getElementById('s-cust').value || "Retail Sale";
-                payload.date = document.getElementById('s-date').value || today;
             } else if (type === 'yield') {
-                payload.amt = parseFloat(document.getElementById('y-weight').value) || 0; // weight stored in amt col
-                payload.date = document.getElementById('hw-date').value || today;
+                payload.amt = safeNum(document.getElementById('y-weight').value);
                 payload.details = "Harvest";
             } else if (type === 'waste') {
-                payload.qty = parseFloat(document.getElementById('w-qty').value) || 0;
-                payload.date = document.getElementById('hw-date').value || today;
-                payload.details = "Wastage";
+                const wType = document.getElementById('w-type').value;
+                payload.amt = safeNum(document.getElementById('w-val').value);
+                payload.details = "Waste: " + wType;
             }
 
             document.getElementById('status').innerText = "⌛ Saving...";
             await fetch(GOOGLE_SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(payload) });
             loadCloudData();
-            // Clear inputs
-            ['e-amt','e-qty','s-cust','s-qty','s-price','y-weight','w-qty'].forEach(id => { if(document.getElementById(id)) document.getElementById(id).value = ''; });
+            ['e-amt','e-qty','s-cust','s-qty','s-price','y-weight','w-val'].forEach(id => { if(document.getElementById(id)) document.getElementById(id).value = ''; });
         }
 
         async function deleteRow(rowId) {
@@ -183,28 +184,16 @@
             loadCloudData();
         }
 
-        function editRow(idx) {
-            const i = dbMaster[idx];
-            if(i.type === 'exp') {
-                document.getElementById('e-date').value = i.date;
-                document.getElementById('e-cat').value = i.details;
-                document.getElementById('e-amt').value = i.amt;
-                document.getElementById('e-qty').value = i.qty;
-                document.getElementById('e-paidBy').value = i.paidBy;
-            } else if(i.type === 'sale') {
-                document.getElementById('s-date').value = i.date;
-                document.getElementById('s-cust').value = i.details;
-                document.getElementById('s-qty').value = i.qty;
-            }
-            alert("Details moved to top form. Edit and save a new entry, then delete this old one.");
-        }
-
         function calculateStock() {
             let s = { "Straw": 0, "Spawn": 0, "PP Bags": 0, "Punnets": 0, "Rubber Bands": 0, "Cotton": 0 };
             dbMaster.forEach(i => {
-                if(i.type === 'exp' && s.hasOwnProperty(i.details)) s[i.details] += parseFloat(i.qty);
-                if(i.type === 'yield') { s["PP Bags"] -= (i.amt * 2); s["Punnets"] -= (i.amt * 5); }
-                if(i.type === 'waste') { s["PP Bags"] -= i.qty; s["Straw"] -= (i.qty * 0.5); s["Spawn"] -= (i.qty * 0.1); }
+                const amt = safeNum(i.amt);
+                const qty = safeNum(i.qty);
+                if(i.type === 'exp' && s.hasOwnProperty(i.details)) s[i.details] += qty;
+                if(i.type === 'yield') { s["PP Bags"] -= (amt * 2); s["Punnets"] -= (amt * 5); }
+                if(i.type === 'waste' && i.details.includes("Contaminated")) {
+                    s["PP Bags"] -= amt; s["Straw"] -= (amt * 0.5); s["Spawn"] -= (amt * 0.1); 
+                }
             });
             return s;
         }
@@ -223,27 +212,25 @@
             }
 
             dbMaster.sort((a,b) => new Date(b.date) - new Date(a.date)).forEach((i, idx) => {
+                const amt = safeNum(i.amt);
                 let valStr = "";
-                if(i.type === 'exp') { te += i.amt; valStr = `<span style="color:var(--danger)">-₹${i.amt}</span>`; }
-                else if(i.type === 'sale') { ts += i.amt; valStr = `<span style="color:var(--success)">+₹${i.amt}</span>`; }
-                else if(i.type === 'yield') { valStr = `${i.amt}kg`; }
-                else if(i.type === 'waste') { valStr = `${i.qty} Bags`; }
+                if(i.type === 'exp') { te += amt; valStr = `<span style="color:var(--danger)">-₹${amt}</span>`; }
+                else if(i.type === 'sale') { ts += amt; valStr = `<span style="color:var(--success)">+₹${amt}</span>`; }
+                else if(i.type === 'yield') { valStr = `${amt}kg`; }
+                else if(i.type === 'waste') { valStr = `<span style="color:var(--danger)">${amt}${i.details.includes('Mushroom')?'kg':' Bags'}</span>`; }
 
                 body.innerHTML += `<tr>
                     <td>${i.date.split('T')[0]}</td>
-                    <td>${i.details} ${i.paidBy ? `<span class="acc-tag ${i.paidBy}">${i.paidBy[0]}</span>` : ''}</td>
+                    <td>${i.details} ${i.paidBy && i.type==='exp' ? `<span class="acc-tag ${i.paidBy}">${i.paidBy[0]}</span>` : ''}</td>
                     <td>${valStr}</td>
-                    <td>
-                        <span class="action-btn edit-btn" onclick="editRow(${idx})">✏️</span>
-                        <span class="action-btn del-btn" onclick="deleteRow(${i.rowId})">🗑️</span>
-                    </td>
+                    <td><span class="action-btn" onclick="deleteRow(${i.rowId})">🗑️</span></td>
                 </tr>`;
             });
 
-            document.getElementById('exp-total').innerText = '₹' + te;
-            document.getElementById('sales-total').innerText = '₹' + ts;
-            document.getElementById('net-total').innerText = '₹' + (ts - te);
-            updateChart(te, ts);
+            document.getElementById('exp-total').innerText = '₹' + te.toLocaleString('en-IN');
+            document.getElementById('sales-total').innerText = '₹' + ts.toLocaleString('en-IN');
+            document.getElementById('net-total').innerText = '₹' + (ts - te).toLocaleString('en-IN');
+            updateChart();
         }
 
         function updateChart() {
@@ -255,8 +242,8 @@
                 data: {
                     labels: dates.map(d => d.split('T')[0]),
                     datasets: [
-                        { label: 'Sales', data: dates.map(d => dbMaster.filter(i => i.date === d && i.type === 'sale').reduce((a,b)=>a+b.amt,0)), borderColor: '#27ae60' },
-                        { label: 'Expenses', data: dates.map(d => dbMaster.filter(i => i.date === d && i.type === 'exp').reduce((a,b)=>a+b.amt,0)), borderColor: '#e74c3c' }
+                        { label: 'Sales', data: dates.map(d => dbMaster.filter(i => i.date === d && i.type === 'sale').reduce((a,b)=>a+safeNum(b.amt),0)), borderColor: '#27ae60' },
+                        { label: 'Expenses', data: dates.map(d => dbMaster.filter(i => i.date === d && i.type === 'exp').reduce((a,b)=>a+safeNum(b.amt),0)), borderColor: '#e74c3c' }
                     ]
                 }
             });
